static/css/style.css
/*
 * This css file includes styles added in the jekyll port of this theme.
 * To find the original style.css that ships with Airspace, read airspace.css
 *
 */

 .italic {
   font-style: italic;
 }

 .bold {
   font-weight: bold;
 }

 .center-text {
   text-align: center;
 }

.post-area {
  padding: 40px;
  width: 100%;
  min-height: 150px;
  background-color: white;
  border-bottom: 1px dotted #ddd;
}

.post-area a:link, .post-area a:visited {
  font-size: 30px;
  color: #333;
}

.post-area a:hover {
  color: #0D0017;
}

#how {
  padding: 90px 0;
}
#how .how-item {
  padding-bottom: 30px;
}
#how .how-item i {
  font-size: 60px;
  color: #4A4656;
  vertical-align: middle;
}
#how .how-item h4 {
  padding-top: 20px;
  margin: 0;
  color: #666;
}
#how .how-item p {
  color: #888;
  padding-top: 10px;
  margin: 0;
  font-size: 14px;
  line-height: 1.8;
}

